--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -16,6 +16,7 @@
 @import "showcase-intro";
 @import "showcase-blocks";
 @import "showcase-case-studies";
+@import "showcase-work";
 @import "services-header";
 @import "services-blocks";
 @import "connect-header";
@@ -27,6 +28,7 @@
 @import "media-queries-home-header";
 @import "media-queries-home-process";
 @import "media-queries-showcase-intro";
+@import "media-queries-showcase-work";
 @import "media-queries-about-intro";
 @import "media-queries-about-blocks";
 @import "media-queries-about-why-and-vision";
