--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -29,6 +29,7 @@
 @import "media-queries-home-process";
 @import "media-queries-showcase-intro";
 @import "media-queries-showcase-work";
+@import "media-queries-showcase-case-studies";
 @import "media-queries-about-intro";
 @import "media-queries-about-blocks";
 @import "media-queries-about-why-and-vision";
