--- a/app/styles/less/showcase-case-studies.less
+++ b/app/styles/less/showcase-case-studies.less
@@ -17,7 +17,7 @@
         .cs-icon-close {
             position: absolute;
             top: 3rem;
-            right: 3rem;
+            right: 1rem;
             cursor: pointer;
             z-index: 100;
             opacity: 0;
@@ -49,6 +49,7 @@
         height: 100%;
         top: 0;
         left: 0;
+        position:fixed;
     }
     & > section.cs-expand-top {
         z-index: 100;
@@ -203,13 +204,13 @@
 div.cs-panel-items,div.cs-panel-items &>div {
     width: 100%;
     height: 100%;
-    top: 0;
+    //top: 0;
     left: 0;
-    position: absolute;
+    position: fixed;
 }
 div.cs-panel-items {
     top: 100%;
-    z-index: 9999;
+    z-index: 999;
     & > div {
         background: #3ba5db;
         z-index: 0;
