added work content, background slider

--- a/app/styles/less/showcase-case-studies.less
+++ b/app/styles/less/showcase-case-studies.less
@@ -352,3 +352,36 @@ section.cs-expand .cs-content,section.cs-expand .cs-icon-close {
 		width: 40%;
 	}
 }
+
+
+/*@-webkit-keyframes test{
+0% {
+    background-image: url('../../images/fuses.jpg');
+}
+33% {
+    background-image: url('../../images/values.jpg');
+}
+100% {              //Complete the loop.
+    background-image: url('../../images/hook.jpg');
+    }
+}*/
+/*
+.featured{ 
+position:absolute;
+top:0;
+left:0;
+width: 100vw;
+height: 100vh;
+//margin: auto 0px;
+background-size:cover;
+background-position:center;
+/*margin-top: -446px;*/
+//-webkit-transition: margin-top 1s;
+//transition-delay: margin-top 0.2s;*/
+/*
+-webkit-animation-name: test;
+-webkit-animation-duration: 15s;
+-webkit-animation-direction: alternate;
+-webkit-animation-timing-function: linear;
+-webkit-animation-iteration-count: infinite;
+}*/
