--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -1677,7 +1677,35 @@ section.cs-expand .cs-icon-close {
     width: 40%;
   }
 }
-.wk-main {
+/*@-webkit-keyframes test{
+0% {
+    background-image: url('../../images/fuses.jpg');
+}
+33% {
+    background-image: url('../../images/values.jpg');
+}
+100% {              //Complete the loop.
+    background-image: url('../../images/hook.jpg');
+    }
+}*/
+/*
+.featured{ 
+position:absolute;
+top:0;
+left:0;
+width: 100vw;
+height: 100vh;
+//margin: auto 0px;
+background-size:cover;
+background-position:center;
+/*margin-top: -446px;*/
+/*
+-webkit-animation-name: test;
+-webkit-animation-duration: 15s;
+-webkit-animation-direction: alternate;
+-webkit-animation-timing-function: linear;
+-webkit-animation-iteration-count: infinite;
+}*/.wk-main {
   position: relative;
   width: 100%;
   height: 100vh;
@@ -1690,7 +1718,7 @@ section.cs-expand .cs-icon-close {
 .wk-main > section {
   position: absolute;
   width: 25%;
-  height: 33.3%;
+  height: 33.333333333333336%;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
@@ -1704,65 +1732,96 @@ section.cs-expand .cs-icon-close {
   opacity: 0;
   pointer-events: none;
 }
+.wk-main > section h3,
+.wk-main > section p {
+  opacity: 0;
+}
 .wk-main > section:first-child {
   top: 0;
   left: 0;
-  background: #e74c3c;
+  background: url(../../images/ely-thumb.jpg);
+  background-position: center;
+  background-size: cover;
 }
 .wk-main > section:nth-child(2) {
   top: 0;
   left: 25%;
-  background: #dd4232;
+  background: url(../../images/diageo-thumb.jpg);
+  background-position: 50% 0%;
+  background-size: cover;
 }
 .wk-main > section:nth-child(3) {
   top: 0;
   left: 50%;
-  background: #d33828;
+  background: url(../../images/ely-thumb.jpg);
+  background-position: center;
+  background-size: cover;
 }
 .wk-main > section:nth-child(4) {
   top: 0;
   left: 75%;
-  background: #c92e1e;
+  background: url(../../images/dhda-thumb.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.wk-main > section:nth-child(4) h3 {
+  font-size: 1.4em;
 }
 .wk-main > section:nth-child(5) {
   top: 33.3%;
   left: 0;
-  background: #c92e1e;
+  background: url(../../images/goc-thumb.jpg);
+  background-position: center;
+  background-size: cover;
 }
 .wk-main > section:nth-child(6) {
   top: 33.3%;
   left: 25%;
-  background: #c92e1e;
+  background: url(../../images/lincoln-thumb.jpg);
+  background-position: center;
+  background-size: cover;
 }
 .wk-main > section:nth-child(7) {
   top: 33.3%;
   left: 50%;
-  background: #c92e1e;
+  background: url(../../images/ely-thumb.jpg);
+  background-position: center;
+  background-size: cover;
 }
 .wk-main > section:nth-child(8) {
   top: 33.3%;
   left: 75%;
-  background: #c92e1e;
+  background: url(../../images/ely-thumb.jpg);
+  background-position: center;
+  background-size: cover;
 }
 .wk-main > section:nth-child(9) {
   top: 66.6%;
   left: 0;
-  background: #c92e1e;
+  background: url(../../images/ely-thumb.jpg);
+  background-position: center;
+  background-size: cover;
 }
 .wk-main > section:nth-child(10) {
   top: 66.6%;
   left: 25%;
-  background: #c92e1e;
+  background: url(../../images/energy-action-thumb.jpg);
+  background-position: center;
+  background-size: cover;
 }
 .wk-main > section:nth-child(11) {
   top: 66.6%;
   left: 50%;
-  background: #c92e1e;
+  background: url(../../images/ely-thumb.jpg);
+  background-position: center;
+  background-size: cover;
 }
 .wk-main > section:nth-child(12) {
   top: 66.6%;
   left: 75%;
-  background: #c92e1e;
+  background: url(../../images/ely-thumb.jpg);
+  background-position: center;
+  background-size: cover;
 }
 .wk-main > section.wk-expand {
   width: 100%;
@@ -1817,18 +1876,24 @@ section.cs-expand .cs-icon-close {
   -moz-transition: opacity 0.2s linear 0.5s;
   transition: opacity 0.2s linear 0.5s;
 }
-.wk-box h3 {
+.wk-box h3,
+.wk-box p {
   text-align: center;
   margin: 0;
-  padding: 20px;
   width: 100%;
-  font-size: 1.8em;
-  letter-spacing: 2px;
-  font-weight: 700;
-  text-transform: uppercase;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+}
+.wk-box h3 {
+  font-size: 1.8em;
+  text-transform: uppercase;
+  margin-top: 3rem;
+}
+.wk-box p {
+  font-size: 1em;
+  color: white;
+  font-family: 'cabrito_norm_regularnormRg';
 }
 .wk-icon {
   font-family: 'FontAwesome';
@@ -2028,14 +2093,21 @@ section.wk-expand .wk-box {
   -moz-transition: opacity 0s linear;
   transition: opacity 0s linear;
 }
+.no-touch section:not(.wk-expand) .wk-box {
+  -webkit-transition: background 0.2s linear;
+  -moz-transition: background 0.2s linear;
+  transition: background 0.2s linear;
+}
 .no-touch section:not(.wk-expand) .wk-box:hover {
   background: #ec5141;
 }
-.no-touch section:not(.wk-expand) .wk-box:hover h3 {
+.no-touch section:not(.wk-expand) .wk-box:hover h3,
+.no-touch section:not(.wk-expand) .wk-box:hover p {
   -webkit-transform: translateY(-15px);
   -moz-transform: translateY(-15px);
   -ms-transform: translateY(-15px);
   transform: translateY(-15px);
+  opacity: 1;
 }
 .wk-content,
 .wk-icon-close {
@@ -2713,6 +2785,11 @@ footer .flow-opposite {
     padding-bottom: 3rem;
   }
 }
+@media screen and (max-width: 69rem) {
+  .wk-box p {
+    font-size: 0.9em;
+  }
+}
 @media screen and (max-width: 48rem) {
   .wk-main {
     height: 60rem;
@@ -3199,4 +3276,7 @@ html.no-js .ribbon-protector {
 }
 html.no-js .how-do-we {
   top: 88rem;
+}
+.slides {
+  display: none;
 }
