--- a/app/styles/less/media-queries-showcase-work.less
+++ b/app/styles/less/media-queries-showcase-work.less
@@ -1,3 +1,10 @@
+@media screen and (max-width: 69rem) {
+	.wk-box {
+		p {
+			font-size:0.9em;
+		}
+	}
+}
 @media screen and (max-width: 48rem) {
 	.wk-main {
 		height:60rem;
