--- a/app/styles/less/showcase-work.less
+++ b/app/styles/less/showcase-work.less
@@ -10,7 +10,7 @@
     & > section {
         position: absolute;
         width: 25%;
-        height: 33.3%;
+        height: (100% / 3);
         -webkit-transition: all 0.5s ease-in-out;
         -moz-transition: all 0.5s ease-in-out;
         transition: all 0.5s ease-in-out;
@@ -23,66 +23,96 @@
             opacity: 0;
             pointer-events: none;
         }
+        h3, p {
+            opacity:0;
+        }
     }
     & > section:first-child {
         top: 0;
         left: 0;
-        background: @primary-color;
+        background:url(../../images/ely-thumb.jpg);
+        background-position:center;
+        background-size:cover;
     }
     & > section:nth-child(2) {
         top: 0;
         left: 25%;
-        background: @primary-color - 10;
+        background:url(../../images/diageo-thumb.jpg);
+        background-position:50% 0%;
+        background-size:cover;
     }
     & > section:nth-child(3) {
         top: 0;
         left: 50%;
-        background: @primary-color - 20;
+        background:url(../../images/ely-thumb.jpg);
+        background-position:center;
+        background-size:cover;
     }
     & > section:nth-child(4) {
         top: 0;
         left: 75%;
-        background: @primary-color - 30;
+        background:url(../../images/dhda-thumb.jpg);
+        background-position:center;
+        background-size:cover;
+        h3 {
+            font-size:1.4em;
+        }
     }
     & > section:nth-child(5) {
         top: 33.3%;
         left: 0;
-        background: @primary-color - 30;
+        background:url(../../images/goc-thumb.jpg);
+        background-position:center;
+        background-size:cover;
     }
     & > section:nth-child(6) {
         top: 33.3%;
         left: 25%;
-        background: @primary-color - 30;
+        background:url(../../images/lincoln-thumb.jpg);
+        background-position:center;
+        background-size:cover;
     }
     & > section:nth-child(7) {
         top: 33.3%;
         left: 50%;
-        background: @primary-color - 30;
+        background:url(../../images/ely-thumb.jpg);
+        background-position:center;
+        background-size:cover;
     }
     & > section:nth-child(8) {
         top: 33.3%;
         left: 75%;
-        background: @primary-color - 30;
+        background:url(../../images/ely-thumb.jpg);
+        background-position:center;
+        background-size:cover;
     }
     & > section:nth-child(9) {
         top: 66.6%;
         left: 0;
-        background: @primary-color - 30;
+        background:url(../../images/ely-thumb.jpg);
+        background-position:center;
+        background-size:cover;
     }
     & > section:nth-child(10) {
         top: 66.6%;
         left: 25%;
-        background: @primary-color - 30;
+        background:url(../../images/energy-action-thumb.jpg);
+        background-position:center;
+        background-size:cover;
     }
     & > section:nth-child(11) {
         top: 66.6%;
         left: 50%;
-        background: @primary-color - 30;
+        background:url(../../images/ely-thumb.jpg);
+        background-position:center;
+        background-size:cover;
     }
     & > section:nth-child(12) {
         top: 66.6%;
         left: 75%;
-        background: @primary-color - 30;
+        background:url(../../images/ely-thumb.jpg);
+        background-position:center;
+        background-size:cover;
     }
     & > section.wk-expand {
         width: 100%;
@@ -137,18 +167,28 @@
     -webkit-transition: opacity 0.2s linear 0.5s;
     -moz-transition: opacity 0.2s linear 0.5s;
     transition: opacity 0.2s linear 0.5s;
-    h3 {
+    h3, p {
         text-align: center;
         margin: 0;
-        padding: 20px;
+        //padding: 20px;
         width: 100%;
-        font-size: 1.8em;
-        letter-spacing: 2px;
-        font-weight: 700;
-        text-transform: uppercase;
+        //font-size: 1.8em;
+        //letter-spacing: 2px;
+        //font-weight: 700;
+        //text-transform: uppercase;
         -webkit-transition: all 0.2s ease-in-out;
         -moz-transition: all 0.2s ease-in-out;
         transition: all 0.2s ease-in-out;
+    }
+    h3 {
+        font-size:1.8em;
+        text-transform: uppercase;
+        margin-top:3rem;
+    }
+    p {
+        font-size:1em;
+        color:white;
+        font-family:@secondary-font;
     }
 }
 .wk-icon {
@@ -355,14 +395,20 @@ section.wk-expand {
 }
 .no-touch {
     section:not(.wk-expand) {
-        .wk-box:hover {
-            h3 {
-                -webkit-transform: translateY(-15px);
-                -moz-transform: translateY(-15px);
-                -ms-transform: translateY(-15px);
-                transform: translateY(-15px);
+        .wk-box {
+            -webkit-transition: background 0.2s linear;
+            -moz-transition: background 0.2s linear;
+            transition: background 0.2s linear;
+            &:hover {
+                h3, p {
+                    -webkit-transform: translateY(-15px);
+                    -moz-transform: translateY(-15px);
+                    -ms-transform: translateY(-15px);
+                    transform: translateY(-15px);
+                    opacity:1;
+                }
+                background: @primary-color + 5;
             }
-            background: @primary-color + 5;
         }
     }
 }
@@ -392,3 +438,8 @@ section.wk-expand .wk-content,section.wk-expand .wk-icon-close {
 		width: 40%;
 	}
 }
+
+
+/////////////////////////////////
+
+
